# ois

./: .env.template  .gitignore  AUTHENTICATION_SETUP.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_auth.py
alembic/: env.py
alembic/versions/: 25414f30739b_outbox_events.py  43af6fb738d4_add_order_type.py  65ffa5e8a285_create_orders_table.py  95e5b37c02ce_modify_outbox_enent_table.py  9ee3a11c2e52_add_description.py  bcafdc0e073b_new_db_model.py  dfdfb0a1c4ea_bucket_is_independent_from_order.py  e1af7332a6cf_order_type_string.py  e1bfa5f938f1_added_bucket_and_position_model.py
app/: main.py
app/api/: auth_routes.py  routes.py  schemas.py
app/core/: auth.py  config.py  dependencies.py  kafka_producer.py  kafka_topics.py
app/db/: database.py  models.py  outbox.py
