[project]
name = "ois"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "fastapi==0.115.14",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httptools==0.6.4",
    "idna==3.10",
    "ipython>=9.4.0",
    "kafka-python==2.2.13",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings~=2.10.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.34.3",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
]
test = [
    "pytest>=8.4.1",
]
